# BetterSkins

./: .gitignore  CMakeLists.txt  README.md  TODO.md  new plan.kra
cpp-base64/: CMakeLists.txt
resources/: formats.json
src/: CMakeLists.txt  imageOperations.cpp  imageOperations.hpp  main.cpp  miscellaneous.hpp  test.cpp
src/color/: CMakeLists.txt  color.cpp  color.h
src/customUI/: CMakeLists.txt  LayerControlPanel.hpp  LayerViewer.hpp  referenceWindow.hpp  skinBrowser.cpp  skinBrowser.h  threeSplitter.cpp  threeSplitter.h  toolBox.hpp  treeStringData.h
src/customUI/colorPickers/: CMakeLists.txt  advColorPicker.cpp  advColorPicker.hpp  colorBars.cpp  colorBars.h  colorCircle.cpp  colorCircle.h  colorPicker.cpp  colorPicker.h  colorShower.cpp  colorShower.hpp  colorSquare.cpp  colorSquare.h  hexPanel.cpp  hexPanel.hpp  hsvPanel.cpp  hsvPanel.h  rgbPanel.cpp  rgbPanel.h
src/customUI/layerModifierUIs/: CMakeLists.txt  colorRampCtrl.cpp  colorRampCtrl.hpp
src/dataStructure/: CMakeLists.txt  SkinFormat.hpp  command.hpp  commandManager.cpp  commandManager.hpp  layer.cpp  layer.hpp  layerIdManager.cpp  layerIdManager.hpp  layerModifier.cpp  layerModifier.hpp  skin.hpp
src/dataStructure/tools/: Tool.hpp  dropper.hpp  eraser.hpp  lightenDarken.hpp  moveTool.hpp  noisePen.hpp  selectionTool.hpp  solidPen.hpp
